@@ -39,6 +39,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   related to landscape images on a page without nailing the width of upright
   images to a fix value which makes views for anon unproportional and user
   preferences useless
+* (bug 6072) Add a 'border' keyword to the image syntax
   
 == Bugfixes since 1.10 ==
 
